--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Foundation Models - Apple Intelligence</title>
   </head>
   <body class="bg-slate-900">
-    <div id="root" class="py-[80px]"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
